Update scribe documentation
